--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "jw-vue-pagination": "^1.0.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
